# BPrace

./: .gitignore  .travis.yml  README.md  old.travis.yml
Code/: README.md
Code/BP_framework/: BP_framework.pro  CMakeLists.txt  main.cpp
Code/BP_framework/CMake/: CMakeLists.txt
Code/BP_framework/Framework/: CMakeLists.txt
Code/BP_framework/Framework/include/: description.hpp  detection.hpp  homography.hpp  process.hpp  utility.hpp
Code/BP_framework/Framework/src/: description.cpp  detection.cpp  homography.cpp  process.cpp  utility.cpp
Code/BP_framework/Framework_test/basic_tests/: test.cpp
Code/BP_framework/Framework_test/data/: config.json
Code/BP_framework/Framework_test/data/tstout/: data.csv
Code/BP_framework/include/: description.hpp  detection.hpp  homography.hpp  utility.hpp
Code/BP_framework/src/: description.cpp  detection.cpp  homography.cpp  utility.cpp
Code/W_dir/: BP  config.json  config_surf.json  create_configs.py  data_all.csv  data_angle.csv  data_blur.csv  data_light.csv  data_res.csv  data_rot.csv  data_zoom.csv  get_data.py  graph_rot.tex  graph_zoom.tex  img8.pgm  img9.pgm  outconf.json  pandas_stats.py  pics.json  pics_ensimag.json  pics_minimal.json  pyplottest.py  run_batch.py  tab_comboperf.tex  tab_descperf.tex  tab_desctimes.tex  tab_detperf.tex  tab_dettimes.tex  tab_matchcount.tex  tst_outconf.json  tsthomo  vyhodnoceni_koncept.txt
Code/W_dir/ENSIMAG/: H0to1  H0to10  H0to10prec  H0to1prec  H0to2  H0to2prec  H0to3  H0to3prec  H0to4  H0to4prec  H0to5  H0to5prec  H0to6  H0to6prec  H0to7  H0to7prec  H0to8  H0to8prec  H0to9  H0to9prec  img0.pgm  img1.pgm  img10.pgm  img2.pgm  img3.pgm  img4.pgm  img5.pgm  img6.pgm  img7.pgm
Code/W_dir/configs/: outconf_asterix.json  outconf_bark.json  outconf_belledonne.json  outconf_bikes.json  outconf_bip.json  outconf_boat.json  outconf_crolle.json  outconf_east_park.json  outconf_east_south.json  outconf_ensimag.json  outconf_graff.json  outconf_graffiti6.json  outconf_light.json  outconf_mars.json  outconf_monet.json  outconf_newyork.json  outconf_resid.json  outconf_ubc.json  outconf_vangogh 2.json  pics_asterix.json  pics_bark.json  pics_belledonne.json  pics_bikes.json  pics_bip.json  pics_boat.json  pics_crolle.json  pics_east_park.json  pics_east_south.json  pics_ensimag.json  pics_graff.json  pics_graffiti6.json  pics_light.json  pics_mars.json  pics_monet.json  pics_newyork.json  pics_resid.json  pics_ubc.json  pics_vangogh 2.json
Code/W_dir/textab/: tab_comboperf.tex  tab_descperf.tex  tab_desctimes.tex  tab_detperf.tex  tab_dettimes.tex
Code/W_dir/tstout/: data.csv
Code/W_dir/tstpics/: H11to12  pic1.xcf  pic10.xcf  pic11.xcf  pic12.xcf  pic2.xcf  pic3.xcf  pic4.xcf  pic5.xcf  pic6.xcf  pic7.xcf  pic8.xcf  pic9.xcf
Code/build-BP_framework-Desktop_Qt_5_5_1_clang_64bit-Debug/: Makefile
Text/: 'Harris_eigen'.aux  'Harris_eigen.pdf'.aux  SLAM.tex  SLAM.tex.recover.bak~  bakalarka-1.cpt  bakalarka.aux  bakalarka.bbl  bakalarka.bcf  bakalarka.bib  bakalarka.blg  bakalarka.lof  bakalarka.run.xml  bakalarka.tex  bakalarka.toc  desky.tex  graph_rot.aux  graph_rot.tex  graph_zoom.aux  graph_zoom.tex  imp_test.tex  prehled_metod.tex  tab_comboperf.aux  tab_descperf.tex  tab_desctimes.aux  tab_desctimes.tex  tab_dettimes.tex  tab_matchcount.tex  uvod.tex  zaver.tex
Text/graph_tex/: graph_rot.aux  graph_rot_old.tex  graph_zoom.aux  graph_zoom.tex
Text/img/: UML_io.uxf  belledone.xcf  impl_uml.eps  impl_uml.uxf
Text/tab_tex/: tab_comboperf.aux  tab_comboperf.tex  tab_comboperf_old.tex  tab_descperf.aux  tab_descperf.tex  tab_desctimes.aux  tab_desctimes.tex  tab_detperf.aux  tab_detperf.tex  tab_dettimes.aux  tab_dettimes.tex  tab_matchcount.aux  tab_matchcount.tex
